--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "tsx --watch src/server.js",
+    "test": "vitest",
     "knex": "node --import tsx ./node_modules/knex/bin/cli.js"
   },
   "author": "",
@@ -11,8 +12,11 @@
   "description": "",
   "devDependencies": {
     "@types/node": "^22.7.5",
+    "@types/supertest": "^6.0.2",
+    "supertest": "^7.0.0",
     "tsx": "^4.19.1",
-    "typescript": "^5.6.3"
+    "typescript": "^5.6.3",
+    "vitest": "^2.1.4"
   },
   "dependencies": {
     "@fastify/cookie": "^11.0.1",
