--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "dev": "tsx --watch src/server.js",
     "test": "vitest",
-    "knex": "node --import tsx ./node_modules/knex/bin/cli.js"
+    "knex": "node --import tsx ./node_modules/knex/bin/cli.js",
+    "build": "tsup src"
   },
   "author": "",
   "license": "ISC",
@@ -14,6 +15,7 @@
     "@types/node": "^22.7.5",
     "@types/supertest": "^6.0.2",
     "supertest": "^7.0.0",
+    "tsup": "^8.3.5",
     "tsx": "^4.19.1",
     "typescript": "^5.6.3",
     "vitest": "^2.1.4"
