--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "api-rest-node",
   "version": "1.0.0",
   "main": "index.js",
+  "engines": {
+    "node": ">= 18"
+  },
   "scripts": {
     "dev": "tsx --watch src/server.js",
     "test": "vitest",
@@ -25,6 +28,7 @@
     "dotenv": "^16.4.5",
     "fastify": "^5.0.0",
     "knex": "^3.1.0",
+    "pg": "^8.13.1",
     "sqlite3": "^5.1.7",
     "zod": "^3.23.8"
   }
